Synchronize all 'public API' sets, fixes #44, GC trick added.